# Duo-Game-Engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  buildAndRun.sh  cmake_install.cmake  editor.cpp  engine.sublime-project  engine.sublime-workspace  main.cpp  main.yaml  movement.cpp  output  test.yaml
DUO-Core/source/: DUO-Engine.h  userComponents.cpp
DUO-Core/source/gameObject/: DUO-Command.cpp  DUO-Command.h  DUO-GameObject.cpp  DUO-GameObject.h  DUO-GameObjectComponent.cpp  DUO-GameObjectComponent.h  DUO-ObjectManager.cpp  DUO-ObjectManager.h  DUO-Scene.cpp  DUO-Scene.h  DUO-SceneManager.cpp  DUO-SceneManager.h  DUO-UIComponent.h  UIObject.cpp  UIObject.h  userDefinedComponent.cpp  userDefinedComponent.h
DUO-Core/source/graphics/: DUO-Graphics.cpp  DUO-Graphics.h  camera.cpp  camera.h  text.cpp  text.h
DUO-Core/source/layers/: Layer.h  Layerstack.cpp  Layerstack.h  objectLayer.cpp  objectLayer.h
DUO-Core/source/maths/: DUO-AABB.cpp  DUO-AABB.h  DUO-Maths.cpp  DUO-Vector2.cpp  DUO-Vector2.h
DUO-Core/source/runtime/: DUO-application.cpp  DUO-application.h  defaultLayer.cpp  defaultLayer.h
DUO-Core/source/utils/: dataStructures.cpp  dataStructures.hpp  fileUtils.cpp  fileUtils.h  screenUtils.h  stringUtils.cpp  stringUtils.h  tupleUtils.h
DUO-Core/source/yaml/: parser.cpp  parser.h  writer.cpp  writer.h
DUO-Examples/Pong/: Makefile  main.cpp  output
DUO-Examples/Pong/source/: DUO-GameObject.cpp  DUO-GameObjectComponent.cpp  DUO-GameObjectComponent.h  DUO-Graphics.cpp  DUO-Graphics.h  DUO-Maths.cpp  DUO-Maths.h  DUO-Runtime.cpp  DUO-Runtime.h  DUO-Scene.cpp  DUO-Scene.h  userComponents.cpp  userComponents.h
Editor/src/: Editor.h  main.cpp
Editor/src/CLI/: CLI.h  sceneEditor.cpp
Editor/src/Scene-Generation/: Generator.h
Editor/src/UI/: panel.cpp  panel.h
Editor/src/assetManager/: assetManager.h
Editor/src/cli/: editor.h
Editor/src/project/: project.cpp  project.h
Editor/src/sceneEditor/: sceneWriter.cpp  sceneWriter.h
Editor/src/scripting/component/: generator.cpp  generator.h
compTest/: components.yml  movement.cpp  scn1.yml
engine/: engine.workspace
engine/.codelite/: engine.session  engine.tags  refactoring.db
normal/: project.yaml
source/: DUO-Engine.h  DUO-GameObject.cpp  DUO-GameObject.h  DUO-GameObjectComponent.cpp  DUO-GameObjectComponent.h  DUO-Graphics.cpp  DUO-Graphics.h  DUO-Keyboard.cpp  DUO-Keyboard.h  DUO-Maths.cpp  DUO-Maths.h  DUO-Runtime.cpp  DUO-Runtime.h  DUO-Scene.cpp  DUO-Scene.h  DUO-Utils.cpp  DUO-Utils.h  DUO-application.cpp  DUO-application.h  main.cpp  userComponents.cpp  userComponents.h
source/gameObject/: DUO-GameObject.cpp  DUO-GameObject.h  DUO-GameObjectComponent.cpp  DUO-GameObjectComponent.h  DUO-ObjectManager.h  DUO-Utils.h
source/graphics/: DUO-Graphics.cpp  DUO-Graphics.h
source/maths/: DUO-AABB.cpp  DUO-AABB.h  DUO-Maths.h  DUO-Vector2.cpp  DUO-Vector2.h
source/runtime/: DUO-application.cpp  DUO-application.h
yaml prototypes/: components.yml  scene.yaml
